refactor routes for spec parse / bulk upload
